--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <header>
-    <img src="../../assets/task-management-logo.png" alt="image of todo list">
-    <div>
-        <h1>EasyTask</h1>
-        <p>Enterprise-level task management without friction</p>
-    </div>
-    
+  <img src="../../assets/dallas-mavericks.svg" alt="image of todo list" />
+  <div>
+    <h1>Dallas Mavericks</h1>
+    <p>Enterprise-level task management without friction</p>
+  </div>
 </header>
