--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,5 @@
   <p id="fallback">Select a user to see their tasks</p>
   }
 </main>
+
+<!-- $event is a variable available for areas in your template where you handle events and holds the data/value that your event emmitter provided in the class component -->
