--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -22,7 +22,7 @@
   button:hover,
   button:active,
   .active {
-    background-color: #9965dd;
+    background-color: #98c6e8;
     color: #150722;
   }
   
