--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,3 +4,5 @@
     <span>{{ user.name }}</span>
   </button>
 </app-card>
+
+<!-- In order to keep the template clean it's common practice to use string interpolation and property binding to access the values and calculations from within the associated component class rather than showing all of that 'under the hood' stuff here -->
